# fiap-mle-unit-4

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lib/train/: __init__.py  datautils.py
models/: PETR4.SA_dataset.pkl  PETR4.SA_model.h5  PETR4.SA_scaler.pkl
notebook/: train.ipynb
notebook/.ipynb_checkpoints/: eda-checkpoint.ipynb
src/api/: __init__.py
