[project]
name = "fiap-mle-unit-4"
version = "0.1.0"
description = ""
authors = [{ name = "Thiago Henrique", email = "thiagohdeplima@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.63,<0.3.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
]

[tool.poetry]
packages = [{ include = "api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"

[tool.poetry.scripts]
serve = "api:main"
