[project]
name = "fiap-mle-unit-4"
version = "0.1.0"
description = ""
authors = [{ name = "Thiago Henrique", email = "thiagohdeplima@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "yfinance (>=0.2.63,<0.3.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"

[tool.poetry.scripts]
serve = "api:main"
